PROJECT(cryptor)

ADD_LIBRARY(${PROJECT_NAME} STATIC cryptor.cc)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC ${GST_CFLAGS_OTHER} -O0 -g -Wall -Wextra)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC /usr/local/include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} cryptopp)

INSTALL(FILES cryptor.h
    DESTINATION /usr/local/include
)

INSTALL(TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION /usr/local/lib
)